modified error handling in sending mail , resetting password

--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -37,7 +37,7 @@
         }
         const token = '<%= token%>'
         // Send PATCH request using fetch API
-        fetch(`/users/resetPassword/:${token}`, {
+        fetch(`/users/resetPassword/${token}`, {
             method: 'PATCH',
             headers: {
       "Content-Type": "application/json",
@@ -51,8 +51,8 @@
                 alert('Password Changed')
             } else {
                 // Handle error
-                console.log(response)
-                alert('Could not change password')
+                console.log(response.body)
+                alert(`Could not change password : ${response.body.message}`)
             }
         })
         .catch(error => {
